# kernel

./: .gitignore  CMakeLists.txt  README.md  helloworld.c  helloworld.cpp
ansi-c/: CMakeLists.txt  README.md  cmake.sh
ansi-c/src/: arrays.c  arraysIntvsChar.c  fileHandling.c  getInput.c  helloworld.c  helloworld.cpp  linkedList.c  manipulationsChar.c  manipulationsString.c  memory.c  operators.c  operatorsLogical.c  operatorsSwitch.c  pointerAndCharArrays.c  pointerArithmetic.c  pointerBasics.c  pointerBasicsArithmetic.c  pointerInFunctions.c  pointerIndirection.c  pointerIndirectionString.c  pointerOperators.c  pointerToFunctionReturns.c  pointerToFunctions.c  pointerToIntegerArray.c  pointerToPointer.c  pointerToPointerString.c  pointerToStringArray.c  pointerToStruct.c  pointersAndCharArrays.c  pointersArithmetic.c  pointersInFunctions.c  pointersStringFunctions.c  stockSpanProblem.c  stringManipulations.c  structBasics.c  structs.c  structsAsArrays.c  structsHasPointers.c  userInput.c
ansi-c/src/collection/: list.c
ansi-c/src/header/: interaction.h  list.h  numX.h  readln.h  search.h  structs.h  variables.h
ansi-c/src/resources/: dummy.txt
ansi-c/src/test/: concat.c  readChar.c
ansi-c/src/utility/: concat.c  initialize.c  interaction.c  list.c  list.h  numX.c  search.c
data-structures/: CMakeLists.txt  README.md  compile.sh
data-structures/src/: collection.c  linkedList.binarySearch.c  linkedList.c  linkedList.middle.c  linkedList.search.c  linkedList.sortedInsert.c  queue.c  selectionSort.c  stack.c  stack.isBalanced.c  stack.reverse.c
data-structures/src/collection/: ArrayList.c  BinaryTree.c  Collection.c  LinkedList.c  Queue.c  Sort.c  Stack.c  list.c
data-structures/src/header/: ArrayList.h  BinaryTree.h  Collection.h  HashMap.h  HashSet.h  HashTable.h  Heap.h  HeapTree.h  LinkedList.h  Queue.h  Stack.h  TreeSet.h  list.h  sort.h
dynamic-programming/: CMakeLists.txt  README.md  compile.sh
dynamic-programming/src/: fibonacci.c  gridTraveller.c
embedded-c/: README.md
embedded-c/src/: ascii.c
embedded-programming/: README.md
kernel-programming/: Makefile  README.md  compile-arm.sh  compile.sh  helloworld.c  other.c  other.h
parallel-programming/: README.md
socket-programming/: CMakeLists.txt  README.md
socket-programming/src/: tcp_client.c  tcp_server.c
socket-programming/src/internal/: client.c  server.c
socket-programming/src/tcp/: client.c  server.c
src/: helloworld.c  operators.c  userInput.c  variables.c
src/ansi-c/: README.md  getInput.c
src/ansi-c/header/: readln.h
src/ansi-c/test/: readln.c
src/ansi-c/usages/: stringManuplations.c
src/embedded-c/: README.md
src/header/: readln.h  variables.h
src/test/: readChar.c
src/usages/: getchar.c
